# cautious-system

./: CMakeLists.txt  LICENSE  README.md
res/hero/editfiles/hero-1/: player_1.xcf  player_2.xcf  player_3.xcf  player_4.xcf
src/: main.c
